--- a/site/templates/twig/mar/armain/pty3/customers/.js.twig
+++ b/site/templates/twig/mar/armain/pty3/customers/.js.twig
@@ -22,7 +22,7 @@ $(function() {
 			if (exists) {
 				swal2.fire({
 					title: "Customer " + input.val() + " exists",
-					text: 'Edit X-Ref Items?',
+					text: 'View / Edit Accounts?',
 					icon: 'question',
 					showCancelButton: true,
 					confirmButtonText: 'Yes',
