--- a/site/templates/twig/purchase-orders/purchase-order/edit/item/form-left.twig
+++ b/site/templates/twig/purchase-orders/purchase-order/edit/item/form-left.twig
@@ -81,7 +81,7 @@
 							'title': 'Search Warehouses',
 							'data-toggle': 'modal',
 							'data-target': '#ajax-modal',
-							'data-lookupurl': page.searchLookupsUrl('warehouses'),
+							'data-lookupurl': page.searchLookupUrl('warehouses'),
 							'data-input': '#whse'
 						}
 					}
