--- a/site/templates/twig/code-tables/mar/trm/list.twig
+++ b/site/templates/twig/code-tables/mar/trm/list.twig
@@ -1,7 +1,8 @@
-{# codes is an array / ObjectCollection of CustomerTypeCode #}
-<div class="list-group">
-	<div class="list-group-item bg-dark text-white">
-		<div class="row align-items-center">
+{% extends 'code-tables/list.twig' %}
+
+{% block header_div %}
+	<div class="list-group-item bg-dark text-white px-2">
+		<div class="form-row align-items-center">
 			<div class="col-1">
 				Code
 			</div>
@@ -18,63 +19,59 @@
 				Hold
 			</div>
 			<div class="col-1">
-				Country
+				Ctry
 			</div>
 			<div class="col-2">
 				Exp Date
 			</div>
+			<div class="col-2 text-center">
+				<a href="{{ page.codeAddUrl() }}" class="btn btn-light btn-sm">
+					<i class="fa fa-plus" aria-hidden="true"></i> Add Code
+				</a>
+			</div>
+		</div>
+	</div>
+{% endblock %}
+
+{% block code_div %}
+	<div data-code="{{ code.code }}" class="list-group-item px-2 code pb-1 pt-1 {{ (response.key is same as(code.code) and response.hasSuccess()) ? 'bg-success text-white' : ''}}">
+		<div class="form-row align-items-center">
+			<div class="col-1">
+				{{ code.code|replace({' ': '&nbsp;'})|raw }}
+			</div>
+			<div class="col-3">
+				{{ code.description }}
+			</div>
+			<div class="col-1">
+				{{ code.method }}
+			</div>
+			<div class="col-1">
+				{{ code.type }}
+			</div>
+			<div class="col-1">
+				{{ code.hold }}
+			</div>
+			<div class="col-1">
+				{{ code.country }}
+			</div>
 			<div class="col-2">
-				{% if page.is_print() == false %}
-					<a href="{{ page.url ~ '?code=new' }}" class="btn btn-light">
-						<i class="fa fa-plus" aria-hidden="true"></i> Add Code
+				{{ code.expiredate|convertdate }}
+			</div>
+			<div class="col-2 text-center">
+				{% if manager.recordlocker.isLocked(code.code) == false or manager.recordlocker.isLockedByUser(code.code) %}
+					<a href="{{ page.codeEditUrl(code.code) }}" class="btn btn-warning btn-sm" title="Edit" aria-label="Edit">
+						<i class="fa fa-pencil" aria-hidden="true"></i> Edit
 					</a>
+					&nbsp;
+					<a href="{{ page.codeDeleteUrl(code.code) }}" class="btn btn-danger btn-sm delete_button" title="Delete" aria-label="Delete">
+						<i class="fa fa-trash" aria-hidden="true"></i> Delete
+					</a>
+				{% else %}
+					<span class="badge badge-secondary">
+						<i class="fa fa-lock" aria-hidden="true"></i> Code Locked By {{ manager.recordlocker.getLockingUser(code.code) }}
+					</span>
 				{% endif %}
 			</div>
 		</div>
 	</div>
-	{% for code in codes %}
-		{# data-code attribute and class code is for the highlight on close #}
-		<div id="{{ code.code|urlencode }}" data-code="{{ code.code }}" class="list-group-item code pb-1 pt-1 {{ (response.key is same as(code.code) and response.has_success() ) ? 'bg-success text-white' : ''}}">
-			<div class="row align-items-center">
-				<div class="col-1 font-monospace">
-					{{ code.code|replace({' ': '&nbsp;'})|raw }}
-				</div>
-				<div class="col-3">
-					{{ code.description }}
-				</div>
-				<div class="col-1">
-					{{ code.method }}
-				</div>
-				<div class="col-1">
-					{{ code.type }}
-				</div>
-				<div class="col-1">
-					{{ code.hold|yesorno|capitalize }}
-				</div>
-				<div class="col-1">
-					{{ code.country }}
-				</div>
-				<div class="col-1">
-					{{ code.exp_date ? code.exp_date|convertdate : '' }}
-				</div>
-				<div class="col-3 text-center">
-					{% if recordlocker.function_locked(page.name, code.code) == false or recordlocker.function_locked_by_user(page.name, code.code) %}
-						{% if page.is_print() == false %}
-							<a href="{{ page.get_codetable_code_editURL(page.codetable, code.code) }}" class="btn btn-warning">
-								<i class="fa fa-pencil" aria-hidden="true"></i> Edit
-							</a>
-							&nbsp;
-							<a href="{{ page.get_codetable_code_deleteURL(page.codetable, code.code) }}" class="btn btn-danger delete_button">
-								<i class="fa fa-trash" aria-hidden="true"></i> Delete
-							</a>
-						{% endif %}
-					{% else %}
-						<span class="badge badge-secondary">
-							<i class="fa fa-lock" aria-hidden="true"></i> Code Locked By {{ recordlocker.get_locked_user(page.name, code.code) }}
-						</span>
-					{% endif %}
-				</div>
-			</div>
-		</div>
-	{% endfor %}
-</div>
+{% endblock %}
