--- a/site/templates/twig/code-tables/mar/trm/edit/form/terms-splits-standard.twig
+++ b/site/templates/twig/code-tables/mar/trm/edit/form/terms-splits-standard.twig
@@ -16,7 +16,7 @@
 	</div>
 </div>
 <div class="list-group">
-	<div class="list-group-item bg-dark text-white">
+	<div class="list-group-item bg-dark text-white text-bold">
 		<div class="row align-items-center text-center text-sm">
 			<div class="col-2 border-right border-light">
 				<div class="row align-items-center">
