--- a/site/templates/twig/code-tables/mar/trm/edit/form/inputs/eom/eom_due_day-x.twig
+++ b/site/templates/twig/code-tables/mar/trm/edit/form/inputs/eom/eom_due_day-x.twig
@@ -13,7 +13,10 @@
 			'data-error': '.error',
 			'readonly': code.eom_thru_day(x) == 0,
 			'min': manager.fieldAttribute('eom_due_day', 'min'),
-			'max': manager.fieldAttribute('eom_due_day', 'max')
+			'max': manager.fieldAttribute('eom_due_day', 'max'),
+			'data-msg': 'Invalid Due Day',
+			'data-msg-min': 'Cannot be zero or more than ' ~ manager.fieldAttribute('eom_due_day', 'max'),
+			'data-msg-max': 'Cannot be zero or more than ' ~ manager.fieldAttribute('eom_due_day', 'max'),
 		}
 	}
 } %}
