--- a/site/templates/twig/code-tables/mar/trm/edit/form/top.twig
+++ b/site/templates/twig/code-tables/mar/trm/edit/form/top.twig
@@ -87,8 +87,38 @@
 			<div class="col-sm-4">
 				<label for="ccprefix">CC Prefix</label>
 			</div>
-			<div class="col-sm-2">
-				<input type="text" name="ccprefix" class="form-control form-control-sm" value="{{ code.ccprefix }}" id="ccprefix" maxlength="{{ manager.fieldAttribute('ccprefix', 'maxlength') }}">
+			<div class="col-sm-6 input-parent">
+				<div class="col-sm-4 px-0">
+					{% include 'util/bootstrap/form/input-group.twig' with {
+						'inputgroup': {
+							'type': 'prepend',
+							'size': 'sm',
+							'input': {
+								'name': 'ccprefix',
+								'value': code.ccprefix,
+								'addclasses': [''],
+								'attributes': {
+									'placeholder': '',
+									'aria-label':  'Credit Card Prefix',
+									'data-jqv': 'true',
+									'maxlength': manager.fieldAttribute('ccprefix', 'maxlength'),
+								}
+							},
+							'button': {
+								'colorclass': 'btn-secondary',
+								'text': 'fa fa-search'|icon,
+								'attributes': {
+									'title': 'Search Credit Cards',
+									'data-toggle': 'modal',
+									'data-target': '#ajax-modal',
+									'data-lookupurl': page.searchLookupUrl('mar/crcd/'),
+									'data-input': '#ccprefix'
+								}
+							}
+						}
+					} %}
+				</div>
+				<small class="text-muted ajax-description description"></small>
 			</div>
 		</div>
 	</div>
