--- a/site/templates/twig/code-tables/mar/trm/edit/form/inputs/ccprefix.twig
+++ b/site/templates/twig/code-tables/mar/trm/edit/form/inputs/ccprefix.twig
@@ -10,7 +10,7 @@
 				'placeholder': '',
 				'aria-label':  'Credit Card Prefix',
 				'data-jqv': 'true',
-				'maxlength': manager.fieldAttribute('ccprefix', 'maxlength'),
+				'maxlength': 1,
 			}
 		},
 		'button': {
