--- a/site/templates/twig/code-tables/mar/trm/edit/form/inputs/ccprefix.twig
+++ b/site/templates/twig/code-tables/mar/trm/edit/form/inputs/ccprefix.twig
@@ -11,6 +11,7 @@
 				'aria-label':  'Credit Card Prefix',
 				'data-jqv': 'true',
 				'maxlength': 1,
+				'readonly': code.type != constant('TYPE_CREDITCARD', manager)
 			}
 		},
 		'button': {
@@ -21,7 +22,8 @@
 				'data-toggle': 'modal',
 				'data-target': '#ajax-modal',
 				'data-lookupurl': page.searchLookupUrl('mar/crcd/'),
-				'data-input': '#ccprefix'
+				'data-input': '#ccprefix',
+				'disabled': code.type != constant('TYPE_CREDITCARD', manager)
 			}
 		}
 	}
