--- a/site/templates/twig/code-tables/mar/trm/edit/form/top.twig
+++ b/site/templates/twig/code-tables/mar/trm/edit/form/top.twig
@@ -4,8 +4,10 @@
 			<div class="col-sm-4">
 				<label for="code">Code</label>
 			</div>
-			<div class="col-sm-3">
-				{% include 'code-tables/mar/trm/edit/form/inputs/code.twig' %}
+			<div class="col-sm-6 input-parent">
+				<div class="col-sm-4 px-0">
+					{% include 'code-tables/mar/trm/edit/form/inputs/code.twig' %}
+				</div>
 			</div>
 		</div>
 	</div>
