--- a/site/templates/twig/code-tables/mar/trm/edit/form/top.twig
+++ b/site/templates/twig/code-tables/mar/trm/edit/form/top.twig
@@ -94,3 +94,18 @@
 		</div>
 	</div>
 </div>
+<div class="row">
+	<div class="col-sm-6">
+		<div class="row mb-3">
+			<div class="col-sm-4">
+				<label for="country">Country</label>
+			</div>
+			<div class="col-sm-6 input-parent">
+				<div class="col-sm-4 px-0">
+					{% include 'code-tables/mar/trm/edit/form/inputs/country.twig' %}
+				</div>
+				<small class="text-muted ajax-description description"></small>
+			</div>
+		</div>
+	</div>
+</div>
