--- a/site/templates/twig/code-tables/mar/trm/edit/form/inputs/eom/eom_due_day-x.twig
+++ b/site/templates/twig/code-tables/mar/trm/edit/form/inputs/eom/eom_due_day-x.twig
@@ -1,8 +1,10 @@
+{% set value = code.eom_due_day(x) %}
+
 {% include 'util/bootstrap/form/input.twig' with {
 	'input': {
 		'name': 'eom_due_day' ~ x,
 		'type': 'number',
-		'value': code.eom_due_day(x),
+		'value': value > 0  ? value : '',
 		'size': 'sm', 
 		'addclasses': [
 			'text-right',
