--- a/site/templates/twig/code-tables/mar/trm/edit/form/inputs/eom/eom_thru_day-x.twig
+++ b/site/templates/twig/code-tables/mar/trm/edit/form/inputs/eom/eom_thru_day-x.twig
@@ -1,9 +1,10 @@
+{% set value = code.eom_thru_day(x) %}
 
 {% include 'util/bootstrap/form/input.twig' with {
 	'input': {
 		'name': 'eom_thru_day' ~ x,
 		'type': 'number',
-		'value': code.eom_thru_day(x),
+		'value': value ? value : '',
 		'size': 'sm', 
 		'addclasses': [
 			'text-right',
@@ -11,7 +12,7 @@
 		],
 		'attributes': {
 			'tabindex': x ~ '12',
-			'readonly': code.eom_thru_day(x) == 0,
+			'readonly': value == 0,
 			'min': x == 1,
 			'max': manager.fieldAttribute('eom_thru_day', 'max'),
 			'required': x == 1,
