FIX: change name to hold

--- a/site/templates/twig/code-tables/mar/trm/edit/form/inputs/hold.twig
+++ b/site/templates/twig/code-tables/mar/trm/edit/form/inputs/hold.twig
@@ -1,6 +1,6 @@
 {% include 'util/bootstrap/form/select-simple.twig' with {
 	'select': {
-		'name': 'type',
+		'name': 'hold',
 		'value' : code.hold,
 		'size': 'sm',
 		'haskeys': true,
