--- a/site/templates/twig/code-tables/mar/trm/edit/form/inputs/freightallow.twig
+++ b/site/templates/twig/code-tables/mar/trm/edit/form/inputs/freightallow.twig
@@ -1,9 +1,15 @@
+{% set value = code.method == constant('METHOD_STD', manager) ? code.freightallow : 'N' %}
+
 {% include 'util/bootstrap/form/select-simple.twig' with {
 	'select': {
 		'name': 'freightallow',
-		'value' : code.freightallow,
+		'value' : value,
 		'size': 'sm',
 		'haskeys': true,
 		'options': manager.fieldAttribute('freightallow', 'options'),
+		'attributes': {
+			'readonly': code.method == constant('METHOD_EOM', manager),
+			'disabled': code.method == constant('METHOD_EOM', manager),
+		}
 	}
 } %}
