FIX: force expire date to be in the future

--- a/site/templates/twig/code-tables/mar/trm/edit/form/inputs/expiredate.twig
+++ b/site/templates/twig/code-tables/mar/trm/edit/form/inputs/expiredate.twig
@@ -1,13 +1,16 @@
-{% include 'util/bootstrap/form/date-picker.twig' with {
-	'inputgroup': {
-		'size': 'sm',
-		'input': {
-			'name': 'expiredate',
-			'value': code.expiredate ? code.expiredate|convertdate : '',
-			'attributes': {
-				'placeholder': '',
-				'aria-label':  'Terms Code Expiration Date'
+<div class="input-parent">
+	{% include 'util/bootstrap/form/date-picker.twig' with {
+		'inputgroup': {
+			'size': 'sm',
+			'input': {
+				'name': 'expiredate',
+				'value': code.expiredate ? code.expiredate|convertdate : '',
+				'attributes': {
+					'placeholder': '',
+					'aria-label':  'Terms Code Expiration Date',
+					'min': 'now'|date('m/d/Y')
+				}
 			}
 		}
-	}
-} %}
+	} %}
+</div>
