--- a/site/templates/twig/code-tables/mar/trm/edit/form/inputs/eom/eom_disc_months-x.twig
+++ b/site/templates/twig/code-tables/mar/trm/edit/form/inputs/eom/eom_disc_months-x.twig
@@ -13,7 +13,7 @@
 		'attributes': {
 			'tabindex': x ~ '15',
 			'data-error': '.error',
-			'readonly': code.eom_percent(x) == 0,
+			'readonly': code.eom_disc_percent(x) == 0,
 			'max': 99
 		}
 	}
