--- a/site/templates/twig/code-tables/mar/trm/edit/form/inputs/expiredate.twig
+++ b/site/templates/twig/code-tables/mar/trm/edit/form/inputs/expiredate.twig
@@ -8,7 +8,7 @@
 				'attributes': {
 					'placeholder': '',
 					'aria-label':  'Terms Code Expiration Date',
-					'min': 'now'|date('m/d/Y')
+					'min-date': 'now'|date('m/d/Y')
 				}
 			}
 		}
