--- a/site/templates/twig/code-tables/mar/trm/edit/form/inputs/ccprefix.twig
+++ b/site/templates/twig/code-tables/mar/trm/edit/form/inputs/ccprefix.twig
@@ -11,7 +11,8 @@
 				'aria-label':  'Credit Card Prefix',
 				'data-jqv': 'true',
 				'maxlength': 1,
-				'readonly': code.type != constant('TYPE_CREDITCARD', manager)
+				'readonly': code.type != constant('TYPE_CREDITCARD', manager),
+				'tabindex': code.type != constant('TYPE_CREDITCARD', manager) ? '-1' : ''
 			}
 		},
 		'button': {
@@ -23,7 +24,8 @@
 				'data-target': '#ajax-modal',
 				'data-lookupurl': page.searchLookupUrl('mar/crcd/'),
 				'data-input': '#ccprefix',
-				'disabled': code.type != constant('TYPE_CREDITCARD', manager)
+				'disabled': code.type != constant('TYPE_CREDITCARD', manager),
+				'tabindex': code.type != constant('TYPE_CREDITCARD', manager) ? '-1' : ''
 			}
 		}
 	}
