--- a/site/templates/twig/code-tables/mar/trm/edit/form/inputs/freightallow.twig
+++ b/site/templates/twig/code-tables/mar/trm/edit/form/inputs/freightallow.twig
@@ -10,6 +10,7 @@
 		'attributes': {
 			'readonly': code.method == constant('METHOD_EOM', manager),
 			'disabled': code.method == constant('METHOD_EOM', manager),
+			'tabindex': code.method == constant('METHOD_EOM', manager) ? '-1' : '',
 		}
 	}
 } %}
