--- a/site/templates/twig/code-tables/mar/trm/edit/form/top.twig
+++ b/site/templates/twig/code-tables/mar/trm/edit/form/top.twig
@@ -1,6 +1,8 @@
 {% set mCodeTables = page.wire('modules').get('CodeTables') %}
 
 {% set cocom = mCodeTables.getCodeTable('mar', 'cocom') %}
+{% set trmg  = mCodeTables.getCodeTable('mar', 'trmg') %}
+
 <div class="row">
 	<div class="col-sm-6">
 		<div class="row mb-3">
@@ -114,6 +116,19 @@
 		</div>
 	</div>
 </div>
+<div class="row">
+	<div class="col-sm-6">
+		<div class="row mb-3">
+			<div class="col-sm-4">
+				<label for="termsgroup">Terms Group</label>
+			</div>
+			<div class="col-sm-6 input-parent">
+				<div class="col-sm-4 px-0">
+					{% include 'code-tables/mar/trm/edit/form/inputs/termsgroup.twig' %}
+				</div>
+				<small class="text-muted ajax-description description">
+					{{ trmg.description(code.termsgroup) }}
+				</small>
 			</div>
 		</div>
 	</div>
