--- a/site/templates/twig/code-tables/mar/trm/edit/form/inputs/code.twig
+++ b/site/templates/twig/code-tables/mar/trm/edit/form/inputs/code.twig
@@ -11,6 +11,7 @@
 			'maxlength': manager.fieldAttribute('code', 'maxlength'),
 			'autofocus': code.isNew(),
 			'readonly': code.isNew() == false,
+			'tabindex': tabindex,
 		}
 	}
 } %}
