--- a/site/templates/twig/code-tables/mar/trm/edit/form/inputs/country.twig
+++ b/site/templates/twig/code-tables/mar/trm/edit/form/inputs/country.twig
@@ -20,7 +20,8 @@
 				'data-toggle': 'modal',
 				'data-target': '#ajax-modal',
 				'data-lookupurl': page.searchLookupUrl('misc/country-codes/'),
-				'data-input': '#country'
+				'data-input': '#country',
+				'tabindex': tabindex,
 			}
 		}
 	}
