--- a/site/templates/twig/code-tables/mar/trm/edit/form/inputs/description.twig
+++ b/site/templates/twig/code-tables/mar/trm/edit/form/inputs/description.twig
@@ -9,6 +9,7 @@
 			'aria-label':  'Terms Code Description',
 			'data-jqv': 'true',
 			'maxlength': manager.fieldAttribute('description', 'maxlength'),
+			'tabindex': tabindex,
 		}
 	}
 } %}
