--- a/site/templates/twig/code-tables/mar/trm/edit/form/inputs/hold.twig
+++ b/site/templates/twig/code-tables/mar/trm/edit/form/inputs/hold.twig
@@ -5,5 +5,8 @@
 		'size': 'sm',
 		'haskeys': true,
 		'options': manager.fieldAttribute('hold', 'options'),
+		'attributes': {
+			'tabindex': tabindex,
+		}
 	}
 } %}
