--- a/site/templates/twig/code-tables/mar/trm/edit/form/inputs/method.twig
+++ b/site/templates/twig/code-tables/mar/trm/edit/form/inputs/method.twig
@@ -6,5 +6,6 @@
 		'haskeys': true,
 		'options': manager.fieldAttribute('method', 'options'),
 		'showvalue': true,
+		'tabindex': tabindex,
 	}
 } %}
