--- a/site/templates/twig/code-tables/mar/trm/edit/form/inputs/termsgroup.twig
+++ b/site/templates/twig/code-tables/mar/trm/edit/form/inputs/termsgroup.twig
@@ -9,7 +9,8 @@
 			'attributes': {
 				'placeholder': '',
 				'aria-label':  'AR Terms Group',
-				'data-jqv': 'true'
+				'data-jqv': 'true',
+				'tabindex': tabindex,
 			}
 		},
 		'button': {
