--- a/site/templates/twig/code-tables/mar/trm/edit/form/inputs/type-e.twig
+++ b/site/templates/twig/code-tables/mar/trm/edit/form/inputs/type-e.twig
@@ -11,5 +11,8 @@
 		'haskeys': true,
 		'options': manager.fieldAttribute('type', 'optionsE'),
 		'showvalue': true,
+		'attributes': {
+			'tabindex': tabindex,
+		}
 	}
 } %}
